[gd_scene load_steps=4 format=3 uid="uid://ciqamm8ido684"]

[ext_resource type="Texture2D" uid="uid://bw0b15t7qau7v" path="res://icon.svg" id="1_iog6m"]
[ext_resource type="Script" uid="uid://elhvn0loxws6" path="res://game/inventory/ui/inventory_slot/inventory_slot_ui.gd" id="1_s50a0"]

[sub_resource type="LabelSettings" id="LabelSettings_iog6m"]
line_spacing = 0.0
font_size = 8

[node name="InventorySlotUI" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_s50a0")

[node name="IconTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_iog6m")
expand_mode = 1

[node name="QuantityLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
grow_horizontal = 0
grow_vertical = 0
text = "1"
label_settings = SubResource("LabelSettings_iog6m")
horizontal_alignment = 2
vertical_alignment = 2
